--- a/NewPrjTemplate/CMakeLists.txt
+++ b/NewPrjTemplate/CMakeLists.txt
@@ -13,6 +13,7 @@ set(CMAKE_C_STANDARD 11)
 SET(CMAKE_SUPPRESS_REGENERATION 1)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin )
+string(APPEND CMAKE_CXX_FLAGS " /Zc:__cplusplus")
 
 ######################
 #conan
