--- a/NewPrjTemplate/CMakeLists.txt
+++ b/NewPrjTemplate/CMakeLists.txt
@@ -55,4 +55,6 @@ target_link_libraries(${MyPrj}
 		CONAN_PKG::boost
 	 )
 
-
+target_precompile_headers(${MyPrj} PRIVATE
+"$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_SOURCE_DIR}/src/stdafx.h>"
+)
