--- a/NewPrjTemplate/CMakeLists.txt
+++ b/NewPrjTemplate/CMakeLists.txt
@@ -13,7 +13,14 @@ set(CMAKE_C_STANDARD 11)
 SET(CMAKE_SUPPRESS_REGENERATION 1)
 set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin )
-string(APPEND CMAKE_CXX_FLAGS " /Zc:__cplusplus")
+
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+	# Ignore warnings about missing pdb
+	set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /ignore:4099")
+	set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /ignore:4099")
+	set(CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} /ignore:4099")
+	string(APPEND CMAKE_CXX_FLAGS " /Zc:__cplusplus")
+endif()
 
 ######################
 #conan
@@ -38,7 +45,6 @@ conan_basic_setup(TARGETS KEEP_RPATHS)
 file(GLOB_RECURSE head 
 	${CMAKE_CURRENT_SOURCE_DIR}/src/**.h 
 	${CMAKE_CURRENT_SOURCE_DIR}/CMakeLists.txt
-	${CMAKE_CURRENT_SOURCE_DIR}/conanfile.txt 
 	${CMAKE_CURRENT_SOURCE_DIR}/conanfile.py)
 file(GLOB_RECURSE src 
 	${CMAKE_CURRENT_SOURCE_DIR}/src/**.cpp 
@@ -56,6 +62,16 @@ target_link_libraries(${MyPrj}
 	PUBLIC
 		CONAN_PKG::boost
 	 )
+
+if ("${CMAKE_CXX_COMPILER_ID}" STREQUAL "MSVC")
+	 # 减小文件
+	 # set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /NODEFAULTLIB")
+	 set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /Ox /Ob2 /Oi /Ot /GL")
+	 set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} /DEBUG:NONE /OPT:REF /OPT:ICF")
+	 set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} /DEBUG:NONE /OPT:REF /OPT:ICF")
+	 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /GR-")
+	 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /Zc:strictStrings- /Zc:inline- /permissive-")
+ endif()
 
 target_precompile_headers(${MyPrj} PRIVATE
 "$<$<COMPILE_LANGUAGE:CXX>:${CMAKE_CURRENT_SOURCE_DIR}/src/stdafx.h>"
